# irtk

./: .gitignore  LICENSE  README.md  pyproject.toml
irtk/: __init__.py  ablation_study.py  activation_cache.py  activation_clustering.py  activation_diffing.py  activation_fingerprinting.py  activation_geometry.py  activation_norm_analysis.py  activation_patching_variants.py  activation_probing.py  activation_statistics.py  activation_subspace_analysis.py  activation_surgery.py  attention_attribution.py  attention_bottleneck_analysis.py  attention_capacity_analysis.py  attention_causal_structure.py  attention_composition.py  attention_composition_paths.py  attention_distance.py  attention_entropy_dynamics.py  attention_flow_analysis.py  attention_gradient_analysis.py  attention_head_classification.py  attention_head_clustering.py  attention_head_cooperation.py  attention_head_diversity.py  attention_head_importance.py  attention_head_interaction.py  attention_head_interpretability.py  attention_head_lineage.py  attention_head_output_analysis.py  attention_head_probing.py  attention_head_pruning.py  attention_head_specialization.py  attention_head_taxonomy.py  attention_information_content.py  attention_key_value_dynamics.py  attention_knowledge_retrieval.py  attention_motif_discovery.py  (+295 more)
notebooks/: 00_api_cheatsheet.ipynb  00_getting_started.ipynb  01_api_cheatsheet.ipynb  01_transformer_anatomy.ipynb  02_transformer_anatomy.ipynb  03_ioi_patching.ipynb  03_logit_lens.ipynb  04_linear_probes.ipynb  05_sparse_autoencoders.ipynb  06_circuit_analysis.ipynb  08_automatic_circuit_discovery.ipynb  08_gradient_interpretability.ipynb  09_getting_started.ipynb  100_head_circuit_decomposition.ipynb  101_residual_attribution.ipynb  102_attention_sparsity.ipynb  103_weight_decomposition.ipynb  104_token_trajectory.ipynb  105_task_decomposition.ipynb  106_layer_communication.ipynb  107_prediction_confidence.ipynb  108_attention_composition.ipynb  109_logit_lens_variants.ipynb  10_activation_steering.ipynb  (+333 more)
(+351 files in other folders)
