[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "irtk"
version = "0.1.0"
description = "IRTK: Interpretability Research Toolkit — mechanistic interpretability with JAX and Equinox"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.4.20",
    "jaxlib>=0.4.20",
    "equinox>=0.11.0",
    "transformers>=4.35.0",
    "numpy>=1.24.0",
    "optax>=0.1.7",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "torch>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["irtk/tests"]
